--- a/src/renderer/styles.css
+++ b/src/renderer/styles.css
@@ -145,6 +145,24 @@ button.box:hover {
     margin-top: -10px;
 }
 
+::-webkit-scrollbar {
+    width: 5px;
+}  
+
+::-webkit-scrollbar-track {
+    background-color: rgb(66, 66, 66);
+}
+   
+::-webkit-scrollbar-thumb {
+    background: grey;
+    transition: 0.2s ease;
+}
+  
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(102, 102, 102); 
+}
+
+
 .node {
     display: flex;
     align-items: center;
@@ -171,4 +189,14 @@ button.box:hover {
 
 .node:hover {
     background: var(--grey);
+}
+
+.hide {
+    display: none;
+}
+
+#back-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
