Improved expensive operation performance

--- a/src/renderer/styles.css
+++ b/src/renderer/styles.css
@@ -170,6 +170,7 @@ button.box:hover {
     color: var(--greyish-white);
     padding: 10px;
     border-radius: 3px;
+    user-select: none;
 }
 
 .node_name {
